2011-03-11  Ben Taylor  <bentaylor.solx86@gmail.com>

        Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=56198
        Fix conditional which had an int for one case and a pointer for another.

        No new tests. Fix compilation on Solaris 10 with SunStudio 12 C++

        * loader/appcache/ApplicationCacheGroup.cpp:
        (WebCore::ApplicationCacheGroup::checkIfLoadIsComplete):

2011-03-11  Brady Eidson  <beidson@apple.com>

        Windows build fix.

        * history/HistoryItem.cpp:
        * loader/icon/IconDatabaseBase.cpp:

2011-03-11  Brady Eidson  <beidson@apple.com>

        Reviewed by Sam Weinig.

        <rdar://problem/8648311> and https://bugs.webkit.org/show_bug.cgi?id=56216
        Rework disabled IconDatabase builds while allowing for a pluggable icon database implementation.

        Project file stuff:
        * Android.mk:
        * CMakeLists.txt:
        * GNUmakefile.am:
        * WebCore.gyp/WebCore.gyp:
        * WebCore.gypi:
        * WebCore.pro:
        * WebCore.xcodeproj/project.pbxproj:
        * WebCore.vcproj/WebCore.vcproj:

        * loader/icon/IconDatabase.cpp:
        * loader/icon/IconDatabase.h: Inherit from IconDatabaseBase.

        * loader/icon/IconDatabaseBase.cpp: Added.
        (WebCore::IconDatabaseBase::iconURLForPageURL):
        (WebCore::iconDatabase):
        (WebCore::setGlobalIconDatabase):
        * loader/icon/IconDatabaseBase.h: Added.
        (WebCore::IconDatabaseBase::IconDatabaseBase):
        (WebCore::IconDatabaseBase::~IconDatabaseBase):
        (WebCore::IconDatabaseBase::setEnabled):
        (WebCore::IconDatabaseBase::isEnabled):
        (WebCore::IconDatabaseBase::defaultIcon):
        (WebCore::IconDatabaseBase::retainIconForPageURL):
        (WebCore::IconDatabaseBase::releaseIconForPageURL):
        (WebCore::IconDatabaseBase::iconForPageURL):
        (WebCore::IconDatabaseBase::setIconURLForPageURL):